--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             </div>
     </div>
     <div class="container">
-        <div class="box" onclick="window.location.href='https://instagram.com/rex_garudefu?igshid=ZGUzMzM3NWJiOQ==';">
+        <div class="box" onclick="window.location.href='https://www.instagram.com/alpha.theme/';">
             <img src="assets/icons/insta2.svg" alt="Icon" class="icon" >
-            <span class="insta-id">alpha.droid</span>
+            <span class="insta-id">Alpha.Themes</span>
           </div>
           <div class="box" onclick="window.location.href='t.me/Darkmode_Alpha';">
             <img src="assets/icons/tele2.svg" alt="Icon" class="icon">
@@ -54,21 +54,21 @@
             <img src="assets/icons/patreon2.svg" alt="Icon" class="icon">
             <span class="insta-id">alpha.droid</span>
           </div>
-          <div class="box" onclick="window.location.href='https://discord.gg/N32h3UhK';">
+          <div class="box" onclick="window.location.href='https://discord.gg/f78mUyUy';">
             <img src="assets/icons/discord2.svg" alt="Icon" class="icon">
-            <span class="insta-id">alpha.droid</span>
+            <span class="insta-id">Alpha Darkmoon</span>
           </div>
           <div class="box" onclick="window.location.href='error.html';">
             <img src="assets/icons/itch2.svg" alt="Icon" class="icon">
-            <span class="insta-id">alpha.droid</span>
+            <span class="insta-id">Rekkusu</span>
           </div>
           <div class="box" onclick="window.location.href='http://aminoapps.com/u/rexgardiv38';">
             <img src="assets/icons/amino2.svg" alt="Icon" class="icon">
-            <span class="insta-id">alpha.droid</span>
+            <span class="insta-id">Rex</span>
           </div>
           <div class="box" onclick="window.location.href='https://play.google.com/store/apps/dev?id=6199435957134169542';">
             <img src="assets/icons/play2.svg" alt="Icon" class="icon">
-            <span class="insta-id">alpha.droid</span>
+            <span class="insta-id">Alpha.Darkmoon</span>
           </div>
     </div>
     <div class="pad">
